# oop-virtual-world

./: .gitignore  README.md
virtual-world-cpp/: CMakeLists.txt  Game.cpp  Game.h
virtual-world-cpp/VirtualWorld/: AllOgranisms.h  Organism.cpp  Organism.h  Tile.cpp  Tile.h  TypeCodes.h  World.cpp  World.h
virtual-world-cpp/VirtualWorld/Animals/: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  CyberSheep.cpp  CyberSheep.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
virtual-world-cpp/VirtualWorld/Plants/: Dandelion.cpp  Dandelion.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Nightshade.cpp  Nightshade.h  Plant.cpp  Plant.h  SosnowskysHogweed.cpp  SosnowskysHogweed.h
virtual-world-java/: .gitignore  pom.xml
virtual-world-java/src/main/java/me/knasuta/virtualworld/: Main.java
virtual-world-java/src/main/java/me/knasuta/virtualworld/gui/: AddOrganismWindow.java  ChooseSaveFileDialog.java  LegendPanel.java  MainWindow.java  Map.java  NewGameWindow.java
virtual-world-java/src/main/java/me/knasuta/virtualworld/simulation/: IOrganismFactory.java  MovementType.java  Organism.java  OrganismFactory.java  OrganismType.java  Point.java  World.java
virtual-world-java/src/main/java/me/knasuta/virtualworld/simulation/animals/: Animal.java  Antelope.java  Fox.java  Human.java  Sheep.java  Turtle.java  Wolf.java
virtual-world-java/src/main/java/me/knasuta/virtualworld/simulation/plants/: Dandelion.java  Grass.java  Guarana.java  Nightshade.java  Plant.java  SosnowskysHogweed.java
